--- a/app/index.css
+++ b/app/index.css
@@ -251,7 +251,7 @@ iframe{
 
 
 
-/* コラボ・協力制作 */
+/* 活動報告 */
 #title-collabo{
   font-size: 2.1vw;
   border-width:3px;
@@ -689,7 +689,7 @@ footer{
 
 
 
-  /* コラボ・協力制作 */
+  /* 活動報告 */
   #title-collabo{
     font-size: 16.128px;
     margin-top: -115.2px;
