--- a/app/index.css
+++ b/app/index.css
@@ -5,7 +5,10 @@ body{
   text-align: center;
   margin: 0;
   background-color: #eeeeee;
-  --main-color: hsla(220, 13%, 18%,1);
+  --dbc-black: hsla(220, 13%, 18%,1);
+  --dbc-yellow: hsla(60, 50%, 50%,1);
+  --dbc-green:hsla(83, 62%, 45%,1);
+  --dbc-blue:hsla(196, 88%, 67%,1);
 }
 
 
@@ -23,10 +26,10 @@ body{
 
 /* header */
 header{
-  width: 100vw;
-  height: 15vw;
+  width: 100%;
+  height: 55px;
   top: 0;
-  background-color: var(--main-color);
+  background-color: var(--dbc-black);
   position: fixed;
   display: flex;
   justify-content: center;
@@ -35,14 +38,14 @@ header{
 }
 
 .title-img{
-  width: 35vw;
+  width: 160px;
   vertical-align: bottom;
 }
 
 #show{
-  font-size: 6vw;
+  font-size: 25px;
   position: absolute;
-  right: 15.28vw;
+  right: calc( (40% - 23px) / 2);
   color: #eeeeee;
   cursor: pointer;
 }
@@ -51,14 +54,15 @@ header{
 .menu{
   position: fixed;
   top: 0;
-  right: -35vw;
+  right: -40%;
   min-height: 100%;
-  width: 35vw;
-  background-color: hsla(60, 50%, 50%,1);
+  width: 40%;
+  background-color:var(--dbc-yellow);
   color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   position: fixed;
   transition: .4s;
   z-index: 2;
@@ -70,18 +74,16 @@ header{
 
 #hide{
   position: absolute;
-  font-size: 6vw;
-  top: 5vw;
-  left: 50%;
-  transform: translateX(-50%);
+  font-size: 30px;
+  top: 12.5px;
   color: #eeeeee;
   cursor: pointer;
 }
 
 .menu-list{
   position: absolute;
-  top: 15vw;
-  height: 300px;
+  top: 55px;
+  height: 500px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -91,25 +93,21 @@ header{
 }
 
 .menu-text{
-  font-size: 13px;
-  color: #eeeeee;
-}
-
-.menu-text > a{
   color: black;
+  font-size: 17px;
   text-decoration: none;
 }
 
 .menu-sns{
-  width: 25vw;
+  height: 180px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
 }
 
 .menu-icon{
-  width: 7vw;
-  height: 7vw;
+  width: 40px;
+  height: 40px;
 }
 
 .cover{
@@ -128,13 +126,20 @@ header{
 
 
 /* youtube */
+.movie-top{
+  margin-top: 55px;
+}
+
 .movie{
-  width: 100vw;
-  height: calc(100vw * 0.5625);
-  margin: 15vw auto auto auto;
+  position: relative;
+  width: 100%;
+  padding-top: 56.25%;
 }
 
 iframe{
+  position: absolute;
+  top: 0;
+  right: 0;
   width: 100%;
   height: 100%;
 }
@@ -143,40 +148,33 @@ iframe{
 
 /* 更新情報 */
 .contentbox{
-  margin-top: 20vw;
+  margin-top: 80px;
 }
 
 #title-new{
   font-size: 17px;
   border-width:3px;
-  margin-top: -15vw;
-  margin-bottom: 5vw;
-  padding-top: 15vw;
+  margin-top: -55px;
+  margin-bottom: 30px;
+  padding-top: 65px;
 }
 
 .swiper-button-prev:after,.swiper-button-next:after{
-  font-size: 7vw !important;
-}
-
-.swiper1 {
-  width: 100vw;
-}
-
-.wrapper1{
-  width: 100vw;
+  font-size: 25px !important;
+  color: black;
 }
 
 .post{
-  width: 68vw !important;
-  height: 55vw !important;
-  margin: 0 15vw;
+  width: 65% !important;
+  height: 220px !important;
+  margin: 0 15%;
   background-color: white;
   border-radius: 5px;
-  padding: 1vw;
+  padding: 10px;
 }
 
 .post-new{
-  color: hsla(60, 50%, 50%,1);
+  color:var(--dbc-green);
   font-size: 15px;
   margin: 0;
   text-align: left;
@@ -197,13 +195,12 @@ iframe{
 
 .post-content{
   font-size: 15px;
-  margin: 5vw auto;
+  margin: 20px auto;
 }
 
 .post-time{
   color: #999999;
   font-size: 15px;
-  height: 2vw;
   margin: 0;
 }
 
@@ -213,16 +210,17 @@ iframe{
 #title-intro{
   font-size: 17px;
   border-width:3px;
-  margin-top: -15vw;
-  margin-bottom: 5vw;
-  padding-top: 15vw;
+  margin-top: -55px;
+  margin-bottom: 30px;
+  padding-top: 65px;
 }
 
 .swiper-box{
-  width: 80vw !important;
-  margin: 0 10vw;
+  width: calc(75% - 20px) !important;
+  margin: 0 12.5%;
   background-color: white;
   border-radius: 5px;
+  padding: 10px;
 }
 
 .swiper-row{
@@ -232,24 +230,17 @@ iframe{
 }
 
 .poster{
-  width: 30vw;
-  height: 35.63vw;
-  margin: auto 0 auto 3vw;
+  width: 40%;
 }
 
 .swiper-title{
   font-size: 17px;
-  margin-bottom: 15px;
+  margin-top: 0;
 }
 
 .swiper-green{
-  color: hsla(83, 62%, 45%,1);
+  color: var(--dbc-green);
   font-size: 17px;
-}
-
-.swiper-row{
-  width: 80vw;
-  margin: auto;
 }
 
 .swiper-row > div{
@@ -264,6 +255,7 @@ iframe{
 
 .swiper-show{
   font-size: 15px;
+  margin-bottom: 0;
 }
 
 .swiper-more{
@@ -291,7 +283,7 @@ iframe{
 }
 
 .swiper-production{
-  width: 75vw;
+  width: 100%;
   margin: 0 auto 3vw;
 }
 
@@ -301,36 +293,42 @@ iframe{
 #title-collabo{
   font-size: 17px;
   border-width:3px;
-  margin-top: -15vw;
-  margin-bottom: 5vw;
-  padding-top: 15vw;
+  margin-top: -55px;
+  margin-bottom: 30px;
+  padding-top: 65px;
 }
 
 .collabo-title{
-  font-size: 13px;
+  font-size: 17px;
+  margin: 0;
 }
 
 .collabo-time{
-  color: hsla(83, 62%, 45%,1);
+  font-size: 15px;
+  margin: 0;
+  color: var(--dbc-green);
   font-style: italic;
 }
 
 .collabo-text{
-  font-size: 13px;
-  margin: auto;
+  font-size: 15px;
+  margin: 20px 0 40px 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
 }
 
+.collabo-text:last-child{
+  margin-bottom: 0;
+}
+
 .collabo-text > p{
-  margin-right: 5vw;
+  margin: 0 10px 0 0;
 }
 
 .collabo-icon{
-  width: 10vw;
-  margin: auto;
+  width: 40px;
   vertical-align: bottom;
 }
 
@@ -340,17 +338,17 @@ iframe{
 #title-gallery{
   font-size: 17px;
   border-width:3px;
-  margin-top: -15vw;
-  margin-bottom: 5vw;
-  padding-top: 15vw;
+  margin-top: -55px;
+  margin-bottom: 30px;
+  padding-top: 65px;
 }
 
 .gallery-main{
-  width: 75vw;
+  width: 75%;
 }
 
 .gallery-sub{
-  width: 20vw;
+  width: 80%;
   cursor: pointer;
 }
 
@@ -360,46 +358,56 @@ iframe{
 #title-link{
   font-size: 17px;
   border-width:3px;
-  margin-top: -15vw;
-  margin-bottom: 5vw;
-  padding-top: 15vw;
+  margin-top: -55px;
+  margin-bottom: 30px;
+  padding-top: 65px;
+}
+
+.link-box{
+  margin-bottom: 40px;
 }
 
 .link-title{
-  font-size: 15px;
-  margin-top: 5vw;
-  margin-bottom: 3vw;
+  font-size: 17px;
 }
 
-.blog-icon{
-  width: 7vw;
-  height: 7vw;
-  vertical-align: bottom;
+.link-content{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .link-text{
   font-size: 15px;
+  margin-right: 20px;
+}
+
+.blog-icon{
+  width: 40px;
+  height: 40px;
+  vertical-align: bottom;
 }
 
 .link-text + iframe{
-  width: 60vw !important;
-  height: 80vw !important;
+  width: 60% !important;
+  height: 350px !important;
 }
 
 
 
 /* 管理者ログイン */
 #title-login{
-  margin: 10vw auto 5vw auto;
+  margin: 40px 0 20px 0;
 }
 
 
 
 /* footer */
 footer{
-  width: 100vw;
-  height: 13vw;
-  background-color: var(--main-color);
+  width: 100%;
+  height: 50px;
+  background-color: var(--dbc-black);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -409,15 +417,16 @@ footer{
 }
 
 .title-bw{
-  width: 25vw;
+  width: 100px;
   vertical-align: bottom;
   /* 彩度で白黒 */
   filter: saturate(0%);
 }
 
 .copyright{
-  font-size: 1vw;
-  margin:5px 0 0 0;
+  font-size: 10px;
+  margin-top:5px;
+  margin-bottom: 0;
   color: white;
 }
 
@@ -425,72 +434,81 @@ footer{
 
 /* newpost page */
 .newpost{
-  width: 80vw;
+  width: 80%;
   margin: auto;
   align-items: center;
 }
 
 .newpost-head{
-  margin-top: 16vw;
-  font-size: 2.5vw;
+  margin-top: 65px;
+  font-size: 17px;
 }
 
 .newpost-title{
-  font-size: 2.2vw;
-  margin-bottom: 5vw;
+  font-size: 17px;
+  margin-bottom: 40px;
 }
 
 .newpost-content{
-  font-size: 2vw;
-  margin: 5vw auto;
+  font-size: 15px;
+  margin-bottom: 20px;
+  text-align: left;
 }
 
 .newpost-time{
-  font-size: 2vw;
-  margin-bottom: 5vw;
+  font-size: 15px;
+  margin-bottom: 60px;
 }
 
 
 
 /* form page */
 .form-top{
-  margin-top: 15vw;
+  margin-top: 55px;
 }
 
 .form-title{
-  font-size: 3vw;
+  font-size: 17px;
+}
+
+.form-content{
+  margin-top: 30px;
 }
 
 .form-head{
-  font-size: 2vw;
+  font-size: 15px;
 }
 
 .form-input{
-  width: 60vw;
-  font-size: 2vw;
+  width: 80%;
+  height: 30px;
+  font-size: 15px;
 }
 
 .form-textarea{
-  width: 60vw;
-  height: 20vw;
-  font-size: 2vw;
+  width: 80%;
+  height: 120px;
+  font-size: 15px;
 }
 
 .form-post{
-  font-size: 2vw;
+  font-size: 15px;
+  font-weight: 600;
+  width: 80%;
+  height: 40px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
-.form-delete{
-  margin: auto;
-}
-
-.form-keep{
-  margin-top: 5vw;
+.form-file{
+  font-size: 15px;
+  font-weight: 600;
+  width: 80%;
+  margin-top: 30px;
 }
 
 .form-check{
   padding: 0;
-  margin: 8vw 0;
 }
 
 .form-list{
@@ -508,45 +526,34 @@ footer{
 
 /* member page */
 .login{
-  margin-top: 15vw;
+  margin-top: 55px;
 }
 
 .login-title{
-  font-size: 3vw;
+  font-size: 17px;
 }
 
 .login-content{
-  margin-top: 1vw;
+  margin-top: 20px;
 }
 
 .login-head{
-  font-size: 2vw;
+  font-size: 17px;
+}
+
+.login-input{
+  font-size: 15px;
+  width: 80%;
+  height: 30px;
 }
 
 .login-button{
-  width: 17vw;
-  margin-top: 5vw;
-  font-size: 1.5vw;
+  width: 80%;
+  height: 40px;
+  margin-top: 50px;
+  font-size: 15px;
+  font-weight: 600;
 } 
-
-
-
-/* upload page */
-.upload-form{
-  height: 15vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 15vw;
-}
-
-
-
-/* done page */
-.done-top{
-  margin-top: 15vw;
-}
 
 
 
@@ -588,6 +595,9 @@ footer{
 
   .menu-sns{
     width: 161.27px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
 
   .menu-icon{
@@ -633,7 +643,7 @@ footer{
   }
 
   .post:first-child>.post-new:first-child{
-    color: hsla(60, 50%, 50%,1);
+    color:var(--dbc-yellow);
     font-size: 15.36px;
   }
 
@@ -683,7 +693,7 @@ footer{
   }
 
   .swiper-green{
-    color: hsla(83, 62%, 45%,1);
+    color: var(--dbc-green);
     font-size: 23.04px;
   }
 
@@ -868,19 +878,6 @@ footer{
 
 
 
-  /* mail page */
-  .mailpage{
-    margin-top: 115.19px;
-  }
-
-  .mailpage-text{
-    word-wrap: break-word;
-    width: 60vw;
-    margin: 3vw auto;
-  }
-
-
-
   /* member page */
   .login{
     margin-top: 115.19px;
@@ -903,16 +900,4 @@ footer{
     margin-top: 38.4px;
     font-size: 11.52px;
   }  
-
-
-
-  /* upload page */
-  .upload-form{
-    height: 115.19px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 15vw;
-  }
 }
