--- a/app/index.css
+++ b/app/index.css
@@ -16,7 +16,7 @@ body{
 .wrap{
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 100%;
   width: 100%;
   height: 100%;
   position: relative;
@@ -83,7 +83,7 @@ header{
 .menu-list{
   position: absolute;
   top: 55px;
-  height: 500px;
+  height: 80%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
