--- a/app/index.css
+++ b/app/index.css
@@ -1,9 +1,9 @@
 @charset "utf-8";
 
-body{
+html{
+  font-size: 10px;
   font-family: HGP創英角ﾎﾟｯﾌﾟ体,sans-serif;
   text-align: center;
-  margin: 0;
   background-color: #eeeeee;
   --dbc-black: hsla(220, 13%, 18%,1);
   --dbc-yellow: hsla(60, 50%, 50%,1);
@@ -11,12 +11,14 @@ body{
   --dbc-blue:hsla(196, 88%, 67%,1);
 }
 
-
+body{
+  margin: 0;
+}
 
 .wrap{
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  min-height: 100vh;
   width: 100%;
   height: 100%;
   position: relative;
@@ -94,7 +96,7 @@ header{
 
 .menu-text{
   color: black;
-  font-size: 17px;
+  font-size: 1.7rem;
   text-decoration: none;
 }
 
@@ -125,9 +127,16 @@ header{
 
 
 
-/* youtube */
-.movie-top{
-  margin-top: 55px;
+/* YouTube */
+.movie-wrapper{
+  width: 768px;
+  max-width: 100%;
+  margin: 55px auto 0;
+  height: calc(100vh - 55px);
+  background-size: auto 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .movie{
@@ -152,7 +161,7 @@ iframe{
 }
 
 #title-new{
-  font-size: 17px;
+  font-size: 1.7rem;
   border-width:3px;
   margin-top: -55px;
   margin-bottom: 30px;
@@ -165,9 +174,9 @@ iframe{
 }
 
 .post{
-  width: 65% !important;
+  width: calc(65% - 20px) !important;
   height: 220px !important;
-  margin: 0 15%;
+  margin: 0 17.5%;
   background-color: white;
   border-radius: 5px;
   padding: 10px;
@@ -175,7 +184,7 @@ iframe{
 
 .post-new{
   color:var(--dbc-green);
-  font-size: 15px;
+  font-size: 1.5rem;
   margin: 0;
   text-align: left;
 }
@@ -189,18 +198,18 @@ iframe{
 }
 
 .post-title{
-  font-size: 15px;
+  font-size: 1.5rem;
   margin-top: 0;
 }
 
 .post-content{
-  font-size: 15px;
+  font-size: 1.5rem;
   margin: 20px auto;
 }
 
 .post-time{
   color: #999999;
-  font-size: 15px;
+  font-size: 1.5rem;
   margin: 0;
 }
 
@@ -208,7 +217,7 @@ iframe{
 
 /* 獨協大学放送研究会について */
 #title-intro{
-  font-size: 17px;
+  font-size: 1.7rem;
   border-width:3px;
   margin-top: -55px;
   margin-bottom: 30px;
@@ -234,13 +243,13 @@ iframe{
 }
 
 .swiper-title{
-  font-size: 17px;
+  font-size: 1.7rem;
   margin-top: 0;
 }
 
 .swiper-green{
   color: var(--dbc-green);
-  font-size: 17px;
+  font-size: 1.7rem;
 }
 
 .swiper-row > div{
@@ -248,13 +257,13 @@ iframe{
 }
 
 .swiper-hidden{
-  font-size: 15px;
+  font-size: 1.5rem;
   height: 80px;
   overflow-y: hidden;
 }
 
 .swiper-show{
-  font-size: 15px;
+  font-size: 1.5rem;
   margin-bottom: 0;
 }
 
@@ -278,7 +287,7 @@ iframe{
 }
 
 .swiper-column > p{
-  font-size: 15px;
+  font-size: 1.5rem;
   margin: 0;
 }
 
@@ -291,7 +300,7 @@ iframe{
 
 /* 活動報告  */
 #title-collabo{
-  font-size: 17px;
+  font-size: 1.7rem;
   border-width:3px;
   margin-top: -55px;
   margin-bottom: 30px;
@@ -299,19 +308,25 @@ iframe{
 }
 
 .collabo-title{
-  font-size: 17px;
+  font-size: 1.7rem;
   margin: 0;
 }
 
+.collabo-slash{
+  font-size: 1.7rem;
+  margin: 0 10px;
+  display: none;
+}
+
 .collabo-time{
-  font-size: 15px;
+  font-size: 1.5rem;
   margin: 0;
   color: var(--dbc-green);
   font-style: italic;
 }
 
 .collabo-text{
-  font-size: 15px;
+  font-size: 1.5rem;
   margin: 20px 0 40px 0;
   display: flex;
   flex-direction: row;
@@ -336,7 +351,7 @@ iframe{
 
 /* ギャラリー */
 #title-gallery{
-  font-size: 17px;
+  font-size: 1.7rem;
   border-width:3px;
   margin-top: -55px;
   margin-bottom: 30px;
@@ -356,7 +371,7 @@ iframe{
 
 /* リンク */
 #title-link{
-  font-size: 17px;
+  font-size: 1.7rem;
   border-width:3px;
   margin-top: -55px;
   margin-bottom: 30px;
@@ -368,7 +383,7 @@ iframe{
 }
 
 .link-title{
-  font-size: 17px;
+  font-size: 1.7rem;
 }
 
 .link-content{
@@ -379,7 +394,7 @@ iframe{
 }
 
 .link-text{
-  font-size: 15px;
+  font-size: 1.5rem;
   margin-right: 20px;
 }
 
@@ -389,7 +404,7 @@ iframe{
   vertical-align: bottom;
 }
 
-.link-text + iframe{
+.link-content + iframe{
   width: 60% !important;
   height: 350px !important;
 }
@@ -398,7 +413,7 @@ iframe{
 
 /* 管理者ログイン */
 #title-login{
-  margin: 40px 0 20px 0;
+  margin-bottom: 20px;
 }
 
 
@@ -424,8 +439,8 @@ footer{
 }
 
 .copyright{
-  font-size: 10px;
-  margin-top:5px;
+  font-size: 1rem;
+  margin-top: 3px;
   margin-bottom: 0;
   color: white;
 }
@@ -441,22 +456,22 @@ footer{
 
 .newpost-head{
   margin-top: 65px;
-  font-size: 17px;
+  font-size: 1.7rem;
 }
 
 .newpost-title{
-  font-size: 17px;
+  font-size: 1.7rem;
   margin-bottom: 40px;
 }
 
 .newpost-content{
-  font-size: 15px;
+  font-size: 1.5rem;
   margin-bottom: 20px;
   text-align: left;
 }
 
 .newpost-time{
-  font-size: 15px;
+  font-size: 1.5rem;
   margin-bottom: 60px;
 }
 
@@ -468,7 +483,7 @@ footer{
 }
 
 .form-title{
-  font-size: 17px;
+  font-size: 1.7rem;
 }
 
 .form-content{
@@ -476,23 +491,23 @@ footer{
 }
 
 .form-head{
-  font-size: 15px;
+  font-size: 1.5rem;
 }
 
 .form-input{
   width: 80%;
   height: 30px;
-  font-size: 15px;
+  font-size: 1.5rem;
 }
 
 .form-textarea{
   width: 80%;
   height: 120px;
-  font-size: 15px;
+  font-size: 1.5rem;
 }
 
 .form-post{
-  font-size: 15px;
+  font-size: 1.5rem;
   font-weight: 600;
   width: 80%;
   height: 40px;
@@ -501,9 +516,7 @@ footer{
 }
 
 .form-file{
-  font-size: 15px;
-  font-weight: 600;
-  width: 80%;
+  font-size: 1.5rem;
   margin-top: 30px;
 }
 
@@ -525,12 +538,25 @@ footer{
 
 
 /* member page */
-.login{
+.login-wrapper{
+  height: calc(100vh - 55px - 50px);
   margin-top: 55px;
+  background-size: auto 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.login{
+  width: 80%;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 0 auto;
+  background-color: white;
 }
 
 .login-title{
-  font-size: 17px;
+  font-size: 1.7rem;
 }
 
 .login-content{
@@ -538,99 +564,91 @@ footer{
 }
 
 .login-head{
-  font-size: 17px;
+  font-size: 1.5rem;
 }
 
 .login-input{
-  font-size: 15px;
+  font-size: 1.5rem;
   width: 80%;
-  height: 30px;
+  height: 25px;
 }
 
 .login-button{
-  width: 80%;
-  height: 40px;
-  margin-top: 50px;
-  font-size: 15px;
+  width: 50%;
+  height: 35px;
+  margin-top: 40px;
+  font-size: 1.5rem;
   font-weight: 600;
 } 
 
 
 
 /* pc view */
-@media screen and (min-width: 600px){
+@media screen and (min-width: 768px){
+  html{
+    font-size: 70%;
+  }
+
   /* header */
   header{
-    height: 115.19px;
+    height: 95px;
   }
 
   .title-img{
-    width: 268.8px;
+    width: 250px;
   }
 
   #show{
-    font-size: 38px;
-    right: 117.35px;
+    font-size: 35px;
+    right: 136px;
   }
   
   /* menu */
   .menu{
-    right: -268.797px;
-    width: 268.797px;
+    right: -307px;
+    width: 307px;
   }
   
   #hide{
-    font-size: 38px;
-    top: 38.4px;
+    font-size: 40px;
+    top: 27.5px;
   }
 
   .menu-list{
-    top: 115.19px;
-    height: 460.797px;
-  }
-  
-  .menu-text{
-    font-size: 19.2px;
+    top: 95px;
+    height: 472.8px;
   }
 
   .menu-sns{
     width: 161.27px;
-    display: flex;
+    height: 40px;
     flex-direction: row;
-    justify-content: space-between;
   }
 
   .menu-icon{
-    width: 38.39px;
-    height: 38.39px;
+    width: 40px;
+    height: 40px;
   }
 
-  .main{
-    margin-top: 115.19px;
+  
+
+  /* YouTube */
+  .movie-wrapper{
+    margin-top: 95px;
+    height: calc(100vh - 95px);
   }
 
 
-  /* youtube */
-  .movie{
-    width: 767px;
-    height: 431.438px;
-    margin-top: 230.38px ;
-  }
 
   /* 更新情報 */
   .contentbox{
-    margin-top: 153.6px;
+    margin-top: 120px;
   }
 
   #title-new{
-    font-size: 16.128px;
     margin-top: -115.2px;
     margin-bottom: 38.4px;
     padding-top: 115.2px;
-  }
-
-  .swiper-button-prev:after,.swiper-button-next:after{
-    font-size: 53px !important;
   }
 
   .swiper1 {
@@ -638,27 +656,17 @@ footer{
   }
 
   .post{
-    width: 209.891px !important;
-    margin: 0 23.04px;
-  }
-
-  .post:first-child>.post-new:first-child{
-    color:var(--dbc-yellow);
-    font-size: 15.36px;
-  }
-
-  .post-title{
-    font-size: 16.896px;
+    width: 200px !important;
+    height: 280px !important;
+    margin: 0 18px;
   }
 
   .post-content{
-    font-size: 15.36px;
     height: 69.109px;
     margin: 38.4px auto;
   }
 
   .post-time{
-    font-size: 15.36px;
     height: 15.36px;
   }
 
@@ -666,7 +674,6 @@ footer{
 
   /* 獨協大学放送研究会について */
   #title-intro{
-    font-size: 16.128px;
     margin-top: -115.2px;
     margin-bottom: 38.4px;
     padding-top: 115.2px;
@@ -674,6 +681,15 @@ footer{
 
   .swiper2{
     width: 768px;
+  }
+
+  .swiper-box{
+    width: 668px !important;
+    margin: 0 40px;
+  }
+
+  .swiper-button-prev:after,.swiper-button-next:after{
+    width: 80px !important;
   }
 
   .swiper-row{
@@ -688,13 +704,7 @@ footer{
   }
 
   .swiper-title{
-    font-size: 15.36px;
     margin-bottom: 38.4px;
-  }
-
-  .swiper-green{
-    color: var(--dbc-green);
-    font-size: 23.04px;
   }
 
   .swiper-row{
@@ -702,12 +712,13 @@ footer{
     margin: auto;
   }
 
-  .swiper-row > p{
-    font-size: 16.128px;
+  .swiper-hidden{
+    height: 300px;
+    overflow-y: visible;
   }
 
-  .swiper-column > p{
-    font-size: 16.128px;
+  .swiper-more{
+    display: none;
   }
 
   .swiper-production{
@@ -719,122 +730,124 @@ footer{
 
   /* 活動報告  */
   #title-collabo{
-    font-size: 16.128px;
     margin-top: -115.2px;
     margin-bottom: 38.4px;
     padding-top: 115.2px;
   }
 
-  .collabo-title{
-    font-size: 23.808px;
+  .collabo-head{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
 
-  .collabo-text{
-    font-size: 16.128px;
+  .collabo-slash{
+    display: block;
+  }
+
+  .collabo-time{
+    font-size: 1.7rem;
   }
 
   .collabo-text > p{
-    margin-right: 76.8px;
+    margin-right: 50px;
   }
 
   .collabo-icon{
-    width: 61.438px;
+    width: 50px;
   }
-
-
-
-  /* リンク */
-  #title-link{
-    font-size: 16.128px;
-    margin-top: -115.2px;
-    margin-bottom: 38.4px;
-    padding-top: 115.2px;
-  }
-
-  .link-title{
-    font-size: 15.36px;
-    margin-top: 38.4px;
-    margin-bottom: 23.04px;
-  }
-
-  .blog-icon{
-    width: 38.391px;
-    height: 38.391px;
-  }
-
-
-
+  
+  
+  
   /* ギャラリー */
   #title-gallery{
-    font-size: 16.128px;
     margin-top: -115.2px;
     margin-bottom: 38.4px;
     padding-top: 115.2px;
   }
-
+  
   .swiper3{
     width: 768px;
   }
-
+  
   .gallery-main{
-    width: 460.797px;
+    width: 576px;
   }
-
+  
   .gallery-sub{
-    width: 115.188px;
+    width: 154px;
   }
-
+  
   .slide-sub{
     width: 768px;
   }
-
-
-
-  /* 管理者ログイン */
-  #title-login{
-    margin: 76.8px auto 38.4px auto;
+  
+  
+  
+  /* リンク */
+  #title-link{
+    margin-top: -115.2px;
+    margin-bottom: 38.4px;
+    padding-top: 115.2px;
   }
 
+  .link-box{
+    margin-bottom: 60px;
+  }
 
+  .blog-icon{
+    width: 50px;
+    height: 50px;
+  }
+
+  .link-content + iframe{
+    width: 460.8px !important;
+    height: 500px !important;
+    margin-top: 23.04px !important;
+  }
+  
+  
+  
+  /* 管理者ログイン */
+  #title-login{
+    margin-bottom: 40px;
+  }
+  
+  
 
   /* footer */
   footer{
-    height: 99.828px;
+    height: 70px;
   }
 
   .title-bw{
-    width: 192px;
+    width: 150px;
   }
 
   .copyright{
-    font-size: 10px;
-    margin:5px 0 0 0;
+    margin-top: 5px;
   }
 
 
 
   /* newpost page */
   .newpost{
-    width: 614.391px;
+    width: 400px;
   }
 
   .newpost-head{
     margin-top: 122.88px;
-    font-size: 19.2px;
   }
 
   .newpost-title{
-    font-size: 16.896px;
     margin-bottom: 38.4px;
   }
 
   .newpost-content{
-    font-size: 15.36px;
     margin: 38.4px auto;
   }
 
   .newpost-time{
-    font-size: 15.36px;
     margin-bottom: 38.4px;
   }
 
@@ -842,62 +855,52 @@ footer{
 
   /* form page */
   .form-top{
-    margin-top: 115.19px;
-  }
-
-  .form-title{
-    font-size: 23.04px;
-  }
-
-  .form-head{
-    font-size: 15.36px;
+    margin-top: 95px;
   }
 
   .form-input{
     width: 468.8px;
-    font-size: 15.36px;
   }
 
   .form-textarea{
     width: 466.8px;
     height: 159.59px;
-    font-size: 15.36px;
   }
 
   .form-post{
-    font-size: 15.36px;
+    width: 159.578px;
   }
 
   .form-keep{
     margin-top: 38.4px;
   }
 
-  .form-check{
-    margin: 61.44px 0;
-  }
-
-
 
   /* member page */
-  .login{
-    margin-top: 115.19px;
+  .login-wrapper{
+    height: calc(100vh - 95px - 70px);
+    margin-top: 95px;
   }
 
-  .login-title{
-    font-size: 23.04px;
+  .login-error{
+    margin-bottom: 40px;
+  }
+
+  .login{
+    width: 614.391px;
   }
 
   .login-content{
-    margin-top: 7.68px;
+    margin-top: 40px;
   }
 
-  .login-head{
-    font-size: 15.36px;
+  .login-input{
+    width: 350px;
   }
 
   .login-button{
-    width: 124px;
-    margin-top: 38.4px;
-    font-size: 11.52px;
+    width: 100px;
+    font-weight: 400;
+    margin-top: 40px;
   }  
 }
