--- a/app/index.css
+++ b/app/index.css
@@ -716,8 +716,14 @@ footer{
 
   /* YouTube */
   .movie-wrapper{
-    margin-top: 95px;
     height: calc(100vh - 95px);
+    width: 768px;
+    max-width: 100%;
+    margin: 95px auto 0;
+    background-size: auto 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
 
