--- a/app/index.css
+++ b/app/index.css
@@ -1,10 +1,13 @@
 @charset "utf-8";
 
 html{
+  /* htmlタグに基準のfont-sizeを設定することで、remを使用できる。
+  (このとき1rem = 10px)。なお、emや%は親要素に影響を受けてしまう。 */
   font-size: 10px;
   font-family: HGP創英角ﾎﾟｯﾌﾟ体,sans-serif;
   text-align: center;
   background-color: #eeeeee;
+  /* --から始まるカスタムプロパティ。以降、var()で使用できる。 */
   --dbc-black: hsla(220, 13%, 18%,1);
   --dbc-yellow: hsla(60, 50%, 50%,1);
   --dbc-green:hsla(83, 62%, 45%,1);
@@ -12,9 +15,11 @@ html{
 }
 
 body{
+  /* ページ上部の空白を消す */
   margin: 0;
 }
 
+/* 画面の基本的な幅を設定 */
 .wrap{
   display: flex;
   flex-direction: column;
@@ -163,6 +168,7 @@ iframe{
 }
 
 .swiper-button-prev:after,.swiper-button-next:after{
+  /* !importantでswiperの設定を上書きする */
   font-size: 25px !important;
   color: black;
 }
@@ -183,6 +189,7 @@ iframe{
   text-align: left;
 }
 
+/* 最初の子要素でなければ */
 .post:not(:first-child)>.post-new{
   visibility:hidden;
 }
@@ -193,15 +200,16 @@ iframe{
 
 .post-title{
   font-size: 1.5rem;
-  margin-top: 0;
+  font-weight: 600;
 }
 
 .post-content{
   font-size: 1.5rem;
   height: 70px !important;
-  margin: 0 !important;
+  /* はみ出るときに改行 */
   word-wrap: break-word;
   overflow: hidden;
+  /* 行の中央を基準に */
   vertical-align: middle;
 }
 
@@ -247,6 +255,7 @@ iframe{
 
 .swiper-row{
   display: flex;
+  /* スマホデザインでは画像が上、PCでは右になるので逆から描画 */
   flex-direction: column-reverse;
   align-items: center;
 }
@@ -285,6 +294,7 @@ iframe{
   bottom:0;
 	width:100%;
   text-align: center;
+  /* linear-gradientでグラデーション */
   background: rgba(0, 0, 0, 0) linear-gradient(180deg, rgba(255, 255, 255, 0.5), white) repeat scroll 0 0;
   font-weight:bold;
 	cursor:pointer;
@@ -411,6 +421,10 @@ iframe{
   margin-right: 20px;
 }
 
+.link-contact{
+  font-size: 1.5rem;
+}
+
 .blog-icon{
   width: 40px;
   height: 40px;
@@ -494,6 +508,11 @@ footer{
   text-align: left;
 }
 
+.postpage-span{
+  margin-left: 10px;
+  color: #6b6b6b;
+}
+
 .postpage-youtube{
   width: 40px;
   vertical-align: bottom;
@@ -517,8 +536,24 @@ footer{
   font-size: 1.7rem;
 }
 
+/* 指定した子要素の数のときにスタイリング */
+.postpage-pagination > a:first-of-type:nth-last-child(3),
+.postpage-pagination > a:first-of-type:nth-last-child(3) ~ a{
+  margin: 30px;
+}
+
+.postpage-pagination > a:first-of-type:nth-last-child(4),
+.postpage-pagination > a:first-of-type:nth-last-child(4) ~ a{
+  margin: 25px;
+}
+
 .postpage-pagination > a:first-of-type:nth-last-child(5),
 .postpage-pagination > a:first-of-type:nth-last-child(5) ~ a{
+  margin: 20px;
+}
+
+.postpage-pagination > a:first-of-type:nth-last-child(6),
+.postpage-pagination > a:first-of-type:nth-last-child(6) ~ a{
   margin: 15px;
 }
 
@@ -615,6 +650,14 @@ footer{
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+.form-text{
+  font-size: 1.5rem;
+}
+
+.form-text:first-child{
+  margin-right: 10px;
 }
 
 
@@ -948,9 +991,24 @@ footer{
   .postpage-time{
     margin-bottom: 50px;
   }
+
+  .postpage-pagination > a:first-of-type:nth-last-child(3),
+  .postpage-pagination > a:first-of-type:nth-last-child(3) ~ a{
+    margin: 40px;
+  }
+
+  .postpage-pagination > a:first-of-type:nth-last-child(4),
+  .postpage-pagination > a:first-of-type:nth-last-child(4) ~ a{
+    margin: 35px;
+  }
   
   .postpage-pagination > a:first-of-type:nth-last-child(5),
   .postpage-pagination > a:first-of-type:nth-last-child(5) ~ a{
+    margin: 30px;
+  }
+  
+  .postpage-pagination > a:first-of-type:nth-last-child(6),
+  .postpage-pagination > a:first-of-type:nth-last-child(6) ~ a{
     margin: 25px;
   }
   
