--- a/app/index.css
+++ b/app/index.css
@@ -139,7 +139,7 @@ header{
   padding-top: 56.25%;
 }
 
-iframe{
+.movie-iframe{
   position: absolute;
   top: 0;
   right: 0;
@@ -160,6 +160,21 @@ iframe{
   margin-top: -55px;
   margin-bottom: 30px;
   padding-top: 65px;
+}
+
+.post-button{
+  font-size: 1.5rem;
+  font-weight: 550;
+  text-decoration: none;
+  padding: 15px 25px;
+  margin: 0 auto;
+  color: white;
+  background-color: var(--dbc-green);
+  border-radius: 5px;
+}
+
+.swiper1{
+  margin-bottom: 30px;
 }
 
 .swiper-button-prev:after,.swiper-button-next:after{
@@ -381,7 +396,7 @@ iframe{
 
 
 
-/* リンク */
+/* お問い合わせ */
 #title-link{
   font-size: 1.7rem;
   border-width:3px;
@@ -405,31 +420,30 @@ iframe{
   align-items: center;
 }
 
-.link-text{
-  font-size: 1.5rem;
-  margin-right: 20px;
-}
-
 .link-contact{
   font-size: 1.5rem;
 }
 
-.blog-icon{
-  width: 40px;
-  height: 40px;
-  vertical-align: bottom;
+.map{
+  position: relative;
+  width: 100%;
+  height: 400px;
+  margin: 0 auto;
 }
 
-.link-content + iframe{
-  width: 60% !important;
-  height: 350px !important;
+.map-iframe{
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
 }
 
 
 
 /* 管理者ログイン */
 #title-login{
-  margin-bottom: 20px;
+  margin: 20px auto;
 }
 
 
@@ -935,7 +949,7 @@ footer{
   
   
   
-  /* リンク */
+  /* お問い合わせ */
   #title-link{
     margin-top: -115.2px;
     margin-bottom: 38.4px;
@@ -951,17 +965,15 @@ footer{
     height: 50px;
   }
 
-  .link-content + iframe{
-    width: 460.8px !important;
-    height: 500px !important;
-    margin-top: 23.04px !important;
+  .map{
+    width: 768px;
   }
   
   
   
   /* 管理者ログイン */
   #title-login{
-    margin-bottom: 40px;
+    margin: 40px auto;
   }
   
   
